[gd_scene load_steps=9 format=3 uid="uid://c3p2i38hqudow"]

[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Gradient/Scripts/body_gradient.gd" id="1_ukug7"]
[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Gradient/Scripts/gradient_1d_texture_rect.gd" id="2_yql06"]
[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Gradient/Scripts/gradient_2d_texture_rect.gd" id="3_x6qlm"]
[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Gradient/Scripts/point_gradient_2d.gd" id="4_tal4j"]

[sub_resource type="Gradient" id="Gradient_5nq62"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6wlxd"]
resource_local_to_scene = true
gradient = SubResource("Gradient_5nq62")

[sub_resource type="Gradient" id="Gradient_cf8yr"]
resource_local_to_scene = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rrx21"]
resource_local_to_scene = true
gradient = SubResource("Gradient_cf8yr")

[node name="BodyGradient" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_ukug7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_SHAPE"

[node name="ShapeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "KEY_LINEAR"
popup/item_0/id = 0
popup/item_1/text = "KEY_RADIAL"
popup/item_1/id = 1
popup/item_2/text = "KEY_SQUARE"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Gradient1DTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("color_picker_button")]
custom_minimum_size = Vector2(114, 0)
layout_mode = 2
texture = SubResource("GradientTexture1D_6wlxd")
expand_mode = 1
script = ExtResource("2_yql06")
color_picker_button = NodePath("../ColorPickerButton")

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="Gradient2DTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(143, 143)
layout_mode = 2
texture = SubResource("GradientTexture2D_rrx21")
expand_mode = 1
script = ExtResource("3_x6qlm")

[node name="FromPoint" type="Control" parent="MarginContainer/VBoxContainer/Gradient2DTextureRect"]
anchors_preset = 0
offset_right = 10.0
offset_bottom = 10.0
script = ExtResource("4_tal4j")

[node name="ToPoint" type="Control" parent="MarginContainer/VBoxContainer/Gradient2DTextureRect"]
anchors_preset = 0
offset_right = 10.0
offset_bottom = 10.0
script = ExtResource("4_tal4j")

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/ShapeOptionButton" to="." method="_on_shape_option_button_item_selected"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer2/Gradient1DTextureRect" to="MarginContainer/VBoxContainer/HBoxContainer2/Gradient1DTextureRect" method="_on_gui_input"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/ColorPickerButton" to="MarginContainer/VBoxContainer/HBoxContainer2/Gradient1DTextureRect" method="_on_color_picker_button_color_changed"]
[connection signal="position_changed" from="MarginContainer/VBoxContainer/Gradient2DTextureRect/FromPoint" to="MarginContainer/VBoxContainer/Gradient2DTextureRect" method="_on_from_point_position_changed"]
[connection signal="position_changed" from="MarginContainer/VBoxContainer/Gradient2DTextureRect/ToPoint" to="MarginContainer/VBoxContainer/Gradient2DTextureRect" method="_on_to_point_position_changed"]
